Add an integration test that runs on JDK-8 (#795)
* Add an integration test that runs on JDK-8

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Refactor the runtime Java selection

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

---------

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>