@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch.core;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -8,7 +8,7 @@ public class MsearchRequestTest extends Assert {
 
     @Test
     public void toBuilder() {
-        MsearchRequest origin = new MsearchRequest.Builder().index("index").searches(List.of()).build();
+        MsearchRequest origin = new MsearchRequest.Builder().index("index").searches(Collections.emptyList()).build();
         MsearchRequest copied = origin.toBuilder().build();
 
         assertEquals(copied.index(), origin.index());
